# chatbot

./: .coverage  .gitignore  app.py  cache.py  disasters.py  intents.json  location.py  main.py  overpass.py  package-lock.json  pyproject.toml  requirements.txt  script.py  setup.bat  setup.ps1  setup_linux.sh  training.py  updates.py
model/: chatbot_model.keras  classes.pkl  words.pkl
templates/: index.html
