[project]
name = "new-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "geopy>=2.4.1",
    "nltk>=3.9.1",
    "numpy<1.25.2",
    "overpy>=0.7",
    "pandas>=2.1.0",
    "pip>=25.2",
    "pycountry>=24.6.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "tensorflow==2.14",
    "tensorflow-io-gcs-filesystem==0.31.0",
]
